--- a/sfg-pet-clinic-web/src/main/resources/templates/owner/index.html
+++ b/sfg-pet-clinic-web/src/main/resources/templates/owner/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8"/>
-        <title>Veterinary Page</title>
+        <title>Owner Page</title>
     </head>
     <body>
         <h1 th:text="'OwnerPage'"></h1>
